[tool.poetry]
name = "pyln-spec"
version = "0.1.0"
description = ""
authors = ["Vincenzo Palazzo <vincenzopalazzodev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
base58 = "2.0.1"
bitstring = "3.1.6"
coincurve = "13.0"
cryptography = "3.2"
mypy = "0.790"
PySocks = "1.7.1"
pycparser = "2.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
